# djchat

./: pyproject.toml
config/: settings.py  urls.py
server/: models.py  schema.py  serializer.py  validators.py  views.py
server/migrations/: 0002_category_icon_channel_banner_channel_icon_and_more.py
